--- a/accionesRepsol.html
+++ b/accionesRepsol.html
@@ -1,53 +1,117 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        .table {
-          margin-top: 20px;
-          border-radius: 10px;
-          box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-        }
-        thead th {
-          background-color: #F8F9FA;
-          color: #212529;
-          text-align: center;
-        }
-      </style>
+
+      <link rel="stylesheet" href="estilo.css">
+      <link rel="icon" href="repsol_icon.png">
+      <meta charset="utf-8">
+      <meta name="author" content="Daniel Valverde"></meta>
+
     <head>							
         <title>Acciones</title>
     </head>
-    <body bgcolor="#F1CC6E"></body>
-        <h1>Acciones de Repsol</h1>
-        <table class="table table-bordered table-striped">
+    <body>
+        <div class="topnav">
+            <a href="index.html">Inicio</a>
+            <a href="contacta.html">Contacto</a>
+            <a class = "active" href="accionesRepsol.html">Cotización</a>
+            <a href="accionesRepsol.html">Multimedia</a>
+        </div>
+        
+        <h1 class="center">Acciones de Repsol</h1>
+        <h5>Actualizado a día 07/02/2023</h5>
+        <table class="table">
             <thead>
               <tr>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Edad</th>
-                <th>Ciudad</th>
+                <th>Acción</th>
+                <th>Último</th>
+                <th>Máximo</th>
+                <th>Mínimo</th>
+                <th>(+/-)</th>
+                <th>%</th>
+                <th>Demanda</th>
+                <th>Oferta</th>
+                <th>Volumen</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td>Juan</td>
-                <td>Pérez</td>
-                <td>30</td>
-                <td>Madrid</td>
+                <td>Repsol (MSE)</td>
+                <td>14,44</td>
+                <td>14,44</td>
+                <td>14,22</td>
+                <td>0,24</td>
+                <td>1,69</td>
+                <td>14,44</td>
+                <td>14,44</td>
+                <td>7.338.580</td>
               </tr>
               <tr>
-                <td>Ana</td>
-                <td>García</td>
-                <td>25</td>
-                <td>Barcelona</td>
+                <td>Repsol (CHIX)</td>
+                <td>14,42</td>
+                <td>14,42</td>
+                <td>14,27</td>
+                <td>0,21</td>
+                <td>1,48</td>
+                <td>14,13</td>
+                <td>14,54</td>
+                <td>20.263</td>
               </tr>
               <tr>
-                <td>Pedro</td>
-                <td>Martínez</td>
-                <td>35</td>
-                <td>Valencia</td>
+                <td>Repsol (BATS)</td>
+                <td>14,42</td>
+                <td>14,42</td>
+                <td>14,23</td>
+                <td>0,25</td>
+                <td>1,73</td>
+                <td>14,24</td>
+                <td>14,45</td>
+                <td>19.410</td>
+              </tr>
+              <tr>
+                <td>Repsol (OTC)</td>
+                <td>15,40</td>
+                <td>15,40</td>
+                <td>15,40</td>
+                <td>0,00</td>
+                <td>0,00</td>
+                <td>13,25</td>
+                <td>13,52</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>Repsol (TURQ)</td>
+                <td>14,42</td>
+                <td>14,42</td>
+                <td>14,22</td>
+                <td>0,24</td>
+                <td>1,69</td>
+                <td>13,28</td>
+                <td>14,43</td>
+                <td>579.104</td>
+              </tr>
+              <tr>
+                <td>Repsol ADR (OTC)</td>
+                <td>15,40</td>
+                <td>15,43</td>
+                <td>15,30</td>
+                <td>0,10</td>
+                <td>0,65</td>
+                <td>15,41</td>
+                <td>15,54</td>
+                <td>15.054</td>
+              </tr>
+              <tr>
+                <td>Repsol (DXE)</td>
+                <td>14,43</td>
+                <td>14,43</td>
+                <td>14,22</td>
+                <td>0,25</td>
+                <td>1,76</td>
+                <td>14,41</td>
+                <td>14,49</td>
+                <td>2.029.786</td>
               </tr>
             </tbody>
           </table>
-          <br>
-          <li><a href="index.html"><button>Click para volver a la página principal</button></a></li>
     </body>
 </html>
