--- a/index.html
+++ b/index.html
@@ -2,63 +2,41 @@
 <html>
     <head>
         <title> Repsol - Página principal </title>
-		<meta charset="utf-8">
-		<meta name="author" content="Daniel Valverde">
-		</meta>
-        <style>
-            h1 {text-align: center;}
-            h2 {text-align: center;}
-            p {text-align: center;}
-            img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            }
-            .topnav {
-                background-color: #333;
-                overflow: hidden;
-            }
+		    <meta charset="utf-8">
+		    <meta name="author" content="Daniel Valverde"></meta>
+        <link rel="stylesheet" href="estilo.css">
+        <link rel="icon" href="repsol_icon.png">
 
-            .topnav a {
-            float: left;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-            }
-
-            /* Change the color of links on hover */
-            .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-            }
-
-            /* Add a color to the active/current link */
-            .topnav a.active {
-            background-color: #868686;
-            color: white;
-            }
-        </style>
     </head>
-    <body bgcolor="#F1CC6E">
+    <body>
         <div class="topnav">
             <a class="active" href="index.html">Inicio</a>
             <a href="contacta.html">Contacto</a>
-            <a href="accionesRepsol.html">Acciones</a>
+            <a href="accionesRepsol.html">Cotización</a>
+            <a href="accionesRepsol.html">Multimedia</a>
         </div>
-        <img src="logo_repsol.png" alt="Logo Repsol" style="width:50%;">
+        <img class="center" src="logo_repsol.png" alt="Logo Repsol" style="width:50%;">
 
-            <h2>Información sobre Repsol</h2>
-            <div>							
-                <p>
-                    Repsol, S. A. es una multinacional energética y petroquímica española, con sede social en Madrid, 
-                    que fue fundada en octubre de 1987. <br>
-                    Sus actividades principales son la exploración, explotación, producción, 
-                    transporte y refinado de petróleo y gas.
-                </p>
-                <p>Para acceder a la página principal, pulsa <a href="https://www.repsol.com/es/index.cshtml">aqui</a>.</p>
-                </div>																											
-            </div>
+        <p class="center"><iframe src="https://www.youtube.com/embed/urbRPeODWCg" width=800 height="400" alt="Video presentación Repsol"></iframe></p>
+
+        <h2 class="center">Información sobre Repsol</h2>
+        <div>							
+            <p class="center">
+               Repsol, S. A. es una multinacional energética y petroquímica española, con sede social en Madrid, 
+               que fue fundada en octubre de 1987. <br>
+               Sus actividades principales son la exploración, explotación, producción, 
+               transporte y refinado de petróleo y gas.
+            </p>
+            <p class="center">Para acceder a la página principal de Repsol, pulsa <a href="https://www.repsol.com/es/index.cshtml">aqui</a>.</p>
+        </div>
     </body>			
+    <footer class="bg-light py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 text-right">
+              <p class="text-muted mt-3">&copy;2023 Repsol</p>
+            </div>
+          </div>
+        </div>
+      </footer>
 </html>
