--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="active" href="index.html">Inicio</a>
             <a href="contacta.html">Contacto</a>
             <a href="accionesRepsol.html">Cotización</a>
-            <a href="accionesRepsol.html">Multimedia</a>
+            <a href="servicios.html">Servicios</a>
         </div>
         <img class="center" src="logo_repsol.png" alt="Logo Repsol" style="width:50%;">
 
