Añadida la página de servicios y algunas cosas en js

--- a/accionesRepsol.html
+++ b/accionesRepsol.html
@@ -5,11 +5,12 @@
       <link rel="icon" href="repsol_icon.png">
       <meta charset="utf-8">
       <meta name="author" content="Daniel Valverde"></meta>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <head>							
         <title>Acciones</title>
     </head>
-    <body>
+    <body style="background-color: #F1CC6E;">
         <div class="topnav">
             <a href="index.html">Inicio</a>
             <a href="contacta.html">Contacto</a>
@@ -19,7 +20,7 @@
         
         <h1 class="center">Acciones de Repsol</h1>
         <h5>Actualizado a día 07/02/2023</h5>
-        <table class="table">
+        <table class="table table-hover">
             <thead>
               <tr>
                 <th>Acción</th>
