--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 		    <meta name="author" content="Daniel Valverde"></meta>
         <link rel="stylesheet" href="estilo.css">
         <link rel="icon" href="repsol_icon.png">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     </head>
-    <body>
+    <body style="background-color: #F1CC6E;">
         <div class="topnav">
             <a class="active" href="index.html">Inicio</a>
             <a href="contacta.html">Contacto</a>
@@ -30,13 +31,4 @@
             <p class="center">Para acceder a la página principal de Repsol, pulsa <a href="https://www.repsol.com/es/index.cshtml">aqui</a>.</p>
         </div>
     </body>			
-    <footer class="bg-light py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-right">
-              <p class="text-muted mt-3">&copy;2023 Repsol</p>
-            </div>
-          </div>
-        </div>
-      </footer>
 </html>
